@@ -42,7 +42,6 @@
 #include <boost/array.hpp>
 #include <boost/asio.hpp>
 #include <boost/filesystem.hpp>
-#include <openssl/md5.h>
 #include <libdcp/rec709_linearised_gamma_lut.h>
 #include <libdcp/srgb_linearised_gamma_lut.h>
 #include <libdcp/gamma_lut.h>
@@ -133,21 +132,6 @@ DCPVideoFrame::encode_locally ()
 		libdcp::GammaLUT::cache.get (16, 1 / _frame->colour_conversion().output_gamma),
 		matrix
 		);
-
-	{
-		MD5_CTX md5_context;
-		MD5_Init (&md5_context);
-		MD5_Update (&md5_context, xyz->data(0), 1998 * 1080 * 4);
-		MD5_Update (&md5_context, xyz->data(1), 1998 * 1080 * 4);
-		MD5_Update (&md5_context, xyz->data(2), 1998 * 1080 * 4);
-		unsigned char digest[MD5_DIGEST_LENGTH];
-		MD5_Final (digest, &md5_context);
-		
-		stringstream s;
-		for (int i = 0; i < MD5_DIGEST_LENGTH; ++i) {
-			s << std::hex << std::setfill('0') << std::setw(2) << ((int) digest[i]);
-		}
-	}
 
 	/* Set the max image and component sizes based on frame_rate */
 	int max_cs_len = ((float) _j2k_bandwidth) / 8 / _frames_per_second;
